#18 Fix overflowing images

--- a/src/components/ArtPresenter/index.css
+++ b/src/components/ArtPresenter/index.css
@@ -28,6 +28,16 @@
 
   max-width: 40em;
 
+  overflow: hidden;
+
+  width: 100%;
+}
+
+.artpresenter__image svg {
+  height: auto;
+
+  max-height: 15em;
+
   width: 100%;
 }
 
